--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 
-  <!-- ✅ Script Google AdSense pour vérification -->
+  <!-- ✅ Balise de vérification Google Search Console -->
+  <meta name="google-site-verification" content="google04017bdc00322ad9" />
+
+  <!-- ✅ Script Google AdSense pour annonces automatiques -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6200161631370932"
      crossorigin="anonymous"></script>
 </head>
@@ -83,4 +86,4 @@
 }
   </script>
 </body>
-    </html>
+</html>
