--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 
-  <!-- ✅ Balise de vérification Google Search Console -->
+  <!-- ✅ Vérification Google Search Console -->
   <meta name="google-site-verification" content="google04017bdc00322ad9" />
 
-  <!-- ✅ Script Google AdSense pour annonces automatiques -->
+  <!-- ✅ Script Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6200161631370932"
      crossorigin="anonymous"></script>
 </head>
@@ -55,7 +55,7 @@
     <div class="links">
       <a href="https://www.tiktok.com/@suspect.eza99" target="_blank">📱 TikTok</a>
       <a href="https://www.instagram.com/nexblad" target="_blank">📸 Instagram</a>
-      <a href="https://www.youtube.com/@GenXmedia" target="_blank">▶️ YouTube</a>
+      <a href="https://www.youtube.com/@GenXmedia-kdz" target="_blank">▶️ YouTube</a>
       <a href="https://www.facebook.com/precieux.okitakoy99.0" target="_blank">📘 Facebook</a>
       <a href="mailto:okitakoyprecieux@gmail.com">✉️ Email</a>
       <a href="https://wa.me/243982730192" target="_blank">💬 WhatsApp 1</a>
@@ -63,6 +63,12 @@
     </div>
 
     <button onclick="copyWhatsApp()">📋 Copier mon WhatsApp</button>
+  </div>
+
+  <!-- Section À propos -->
+  <div class="about">
+    <h2>À propos</h2>
+    <p>Je suis Precieux Okitakoy, créateur IA passionné par les sons, les mots et les connexions humaines. Ce site est mon espace créatif pour partager mes projets et mes réseaux.</p>
   </div>
 
   <!-- Son de clic -->
@@ -86,4 +92,4 @@
 }
   </script>
 </body>
-</html>
+      </html>
