--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 
   <!-- ✅ Vérification Google Search Console -->
-  <meta name="google-site-verification" content="google04017bdc00322ad9" />
+  <meta name="google-site-verification" content="google040178dc00322ad9" />
 
   <!-- ✅ Script Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6200161631370932"
